--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,1 +1,57 @@
-<p>users works!</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="py-3 text-center">
+            <h2>Users</h2>
+        </div>
+        <div class="col-9 mb-5">
+            <div class="row">
+                <div class="col-2 offset-md-10">
+                    <button (click)="goToAddUserPage()" class="btn btn-success">Add New User</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-9">
+            <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th class="th-center" scope="col">First Name</th>
+                    <th class="th-center" scope="col">Last Name</th>
+                    <th class="th-center" scope="col">Username</th>
+                    <th class="th-center" scope="col">Email</th>
+                    <th class="th-center" scope="col">Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let usr of users;">
+                    <td class="align-middle tdata-center">{{ usr.firstName }}</td>
+                    <td class="align-middle tdata-center">{{ usr.lastName }}</td>
+                    <td class="align-middle tdata-center">{{ usr.username }}</td>
+                    <td class="align-middle tdata-center">{{ usr.email }}</td>
+                    <td class="align-middle tdata-center"><button style="margin-right: 10px;" (click)="goToEditPage(usr.id)" class="btn btn-primary">Edit</button>
+                      <button data-bs-toggle="modal" (click)="setSelectedUserId(usr.id)" data-bs-target="#dialogToDeleteUser"  class="btn btn-danger">Remove</button></td>
+                  </tr>
+                </tbody>
+            </table>
+        </div>
+        
+    </div>
+</div>
+
+<!-- Modal for dialog to delete user -->
+<div class="modal fade" id="dialogToDeleteUser" tabindex="-1" aria-labelledby="dialogToDeleteUser" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Delete User</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            Are you sure you want to delete this user!?
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" (click)="removeUser()" class="btn btn-danger">Delete</button>
+        </div>
+        </div>
+    </div>
+</div>
