--- a/src/app/budget/budget.component.html
+++ b/src/app/budget/budget.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-4">
       <div class="py-5 text-center">
-        <h2>Budget</h2>
+        <h2>Budget Summary</h2>
         <p class="lead"></p>
       </div>
       <form [formGroup]="budgetForm" (ngSubmit)="onSubmit()">
