--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="vertical-center d-flex w-100 h-100 p-3 mx-auto main-bg">
+  <main class="px-3" style="width: 40%; color: white;" > 
+      <h1>Manage your budget.</h1>
+      <p class="lead">This app helps users to manage and track incomes and expenses using categories.</p>
+      <button *ngIf="!loggedIn" (click)="login()" class="btn btn-lg btn-light">Login</button>
+      <p class="lead">
+      </p>
+  </main>
+</div>
