--- a/src/app/add-edit-category/add-edit-category.component.html
+++ b/src/app/add-edit-category/add-edit-category.component.html
@@ -1,1 +1,27 @@
-<p>add-edit-category works!</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="py-3 text-center">
+            <h2 *ngIf="!isEditMode">Add New Category</h2>
+            <h2 *ngIf="isEditMode">Edit Category</h2>
+        </div>
+       <div class="col-4">
+            <form [formGroup]="addEditForm" (ngSubmit)="onSubmit()">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input formControlName="name" type="text" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" class="form-control is-invalid" id="name" placeholder="Name">
+                    <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                    <div *ngIf="f.name.errors.required">Name is required</div>
+                    </div>
+        
+                    <br/>
+                    <div *ngIf="submitted && saveError" class="alert alert-danger" role="alert">
+                        An error has been during {{ isEditMode ? 'updating' : 'saving' }}!
+                    </div>
+                    <br/>
+
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">{{ isEditMode ? 'Update' : 'Save' }}</button>
+                </div>
+            </form>
+       </div>
+    </div>
+</div>
