--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container main-bg">
     <div class="row justify-content-center">
         <div class="py-3 text-center">
             <h2>Users</h2>
@@ -19,7 +19,7 @@
                     <th class="th-center" scope="col">Username</th>
                     <th class="th-center" scope="col">Email</th>
                     <th class="th-center" scope="col">Actions</th>
-                  </tr>
+                  </tr> 
                 </thead>
                 <tbody>
                   <tr *ngFor="let usr of users;">
@@ -49,7 +49,7 @@
             Are you sure you want to delete this user!?
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" id="closeModalButton" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <button type="button" (click)="removeUser()" class="btn btn-danger">Delete</button>
         </div>
         </div>
