--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -32,8 +32,13 @@
                   </tr>
                 </tbody>
             </table>
+            <ngb-pagination #pg
+            (pageChange)="pageChange(pg.page)"
+            [(page)]="findUsers.page"
+            [pageSize]="findUsers.pageSize"
+            [collectionSize]="totalLength"  
+          ></ngb-pagination>
         </div>
-        
     </div>
 </div>
 
